--- a/frontend_beyond_detail/src/components/Footer/Footer.scss
+++ b/frontend_beyond_detail/src/components/Footer/Footer.scss
@@ -25,10 +25,14 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 0 1rem;
+  word-break: break-word;
+  overflow-wrap: break-word;
 
   img {
     padding-bottom: 20%;
     width: 200px;
+    max-width: 90%;
   }
 
   h3 {
@@ -36,6 +40,8 @@
     letter-spacing: 2px;
     font-size: 25px;
     padding-bottom: 10%;
+    word-break: break-word;
+    overflow-wrap: break-word;
   }
 
   h5 {
@@ -43,6 +49,8 @@
     letter-spacing: 2px;
     font-size: 15px;
     text-align: center;
+    word-break: break-word;
+    overflow-wrap: break-word;
   }
 }
 
@@ -53,6 +61,8 @@
   margin: 20px;
   color: var(--lightGray-color);
   letter-spacing: 1px;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .footer-container .social-links {
@@ -120,13 +130,17 @@
 
 .left-footer-bottom {
   margin-left: 80px;
+  padding: 0 1rem;
 }
 
 .right-footer-bottom {
   margin-right: 50px;
   height: 100%;
+  padding: 0 1rem;
   p {
     cursor: default;
+    word-break: break-word;
+    overflow-wrap: break-word;
   }
 }
 
@@ -138,6 +152,7 @@
   .footer-container {
     flex-wrap: wrap;
     height: 100%;
+    padding: 0 1rem;
   }
 
   .footer-bottom {
@@ -148,11 +163,17 @@
 
   .left-footer-bottom {
     margin-left: 0px;
+    padding: 1rem;
+    text-align: center;
+    width: 100%;
   }
 
   .right-footer-bottom {
     margin-right: 0px;
     height: 100%;
+    padding: 1rem;
+    width: 100%;
+    text-align: center;
   }
 }
 
